# csaf-lib

./: .gitignore  CHANGELOG.md  DEVELOP.md  README.md  RELEASE.md  pyproject.toml
docs/: builder.md  creating-documents.md  csafvex-usage.md  plugins.md
scripts/: update-version.sh
src/csaf_lib/: __init__.py  cli.py  utils.py
src/csaf_lib/builder/: __init__.py  csafvex.py
src/csaf_lib/models/: __init__.py  common.py  csafvex.py  document.py  enums.py  product_tree.py  vulnerability.py
src/csaf_lib/validation/: __init__.py  base.py  manager.py  result.py  validator.py
src/csaf_lib/verification/: __init__.py  csaf_compliance.py  data_type_checks.py  result.py  verifier.py
src/csaf_lib/verification/schemas/: __init__.py
src/csaf_vex/: __init__.py
src/csaf_vex/builder/: csafvex.py
src/csaf_vex/models/: product_tree.py
src/csaf_vex/validation/: __init__.py  validator.py
tests/: conftest.py  test_builder.py  test_csaf_compliance.py  test_data_type_checks.py  test_models.py  test_utils.py
tests/test_files/: cve-2023-20593.json  invalid-category.json  invalid-empty-title.json  invalid-whitespace-title.json  sample-vex.json
tests/validation/: test_base.py  test_manager.py  test_validator.py
